--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "next": "14.2.0",
     "react": "^18.2.0",
