--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
     "next": "14.2.0",
+    "ogl": "^1.0.11",
     "openai": "^6.9.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
