--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.0.8",
     "gsap": "^3.13.0",
     "lucide-react": "^0.344.0",
+    "matter-js": "^0.20.0",
     "next": "14.2.0",
     "ogl": "^1.0.11",
     "openai": "^6.9.1",
@@ -28,6 +29,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
+    "@types/matter-js": "^0.20.2",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
